--- a/Document_de_conception_generale/Document_de_conception_generale.tex
+++ b/Document_de_conception_generale/Document_de_conception_generale.tex
@@ -220,7 +220,7 @@ Ce module ne doit effectuer aucun traitement sur la requête de l'utilisateur. I
 				\begin{flushleft}
 					Le module des historiques des événements regroupe les classes qui implémentent la gestion d'historique des événements et le stockage de l'historique. Il doit donc accomplir les taches suivantes : 
 					\begin{itemize}
-						\item Insérer dans un fichier les événements qui sont survenu ( création de compte, suppression de compte etc .. )
+						\item Insérer dans un fichier les événements qui sont survenu ( création de compte, suppression de compte etc )
 						\item Stocker les actions survenue dans un fichier texte.
 						\item Afficher les événements survenu.
 						\item Éditer un rapport une fois par jours contenant les événements de la journée.
@@ -229,7 +229,7 @@ Ce module ne doit effectuer aucun traitement sur la requête de l'utilisateur. I
 				
 				\subparagraph{Module de gestion des comptes clients}
 				\begin{flushleft}
-					
+					Le module de gestion de comptes clients regroupe les classes qui implémentent le stockage et les droits des comptes.
 				\end{flushleft}
 				
 				
