Ajout fin module gestion des comptes clients

--- a/Document_de_conception_generale/Document_de_conception_generale.tex
+++ b/Document_de_conception_generale/Document_de_conception_generale.tex
@@ -229,7 +229,15 @@ Ce module ne doit effectuer aucun traitement sur la requête de l'utilisateur. I
 				
 				\subparagraph{Module de gestion des comptes clients}
 				\begin{flushleft}
-					Le module de gestion de comptes clients regroupe les classes qui implémentent le stockage et les droits des comptes.
+					Le module de gestion de comptes clients regroupe les classes qui implémentent le stockage et les droits des comptes. Elle réalise donc les actions suivante : 
+					\begin{itemize}
+						\item Stocker les comptes dans différents fichier texte.
+						\item Vérifier si un compte existe.
+						\item Vérifier si le mot de passe est correcte.
+						\item Crée un compte.
+						\item Supprimer un compte.
+						\item Bannir un compte.
+					\end{itemize}
 				\end{flushleft}
 				
 				
