fin rapport reunion 7

--- a/Rapport_reunion/Rapport_reunion_7.tex
+++ b/Rapport_reunion/Rapport_reunion_7.tex
@@ -33,8 +33,8 @@ DCG : Document de Conception Générale.
 \subsection*{Ordre du jour}
 \begin{itemize}[label = $\ast$]
 \item Avancement du DCG.
-\item Réalisation cahier des tests d'intégration.
-\item Utilisation de genmymodel pour le diagramme de sequence.
+\item Réalisation du cahier des tests d'intégration.
+\item Utilisation de GenMyModel pour le diagramme de sequence.
 \item Possible absence de Nicolas Reynaud, responsable communication, pour l'envoi du DCG.
 \end{itemize}
 
@@ -50,9 +50,9 @@ DCG : Document de Conception Générale.
 \subsection*{Décision de la réunion}
 
 \begin{itemize}[label = $\ast$]
-\item Nicolas REYNAUD fêtant son anniversaire le soir du 22/11/14, date de rendu du DCG, Kevin BASCOL devra se charger de l'envoi du document, si il n'est pas terminé avant 18h.
+\item Nicolas REYNAUD fêtant son anniversaire le week-end du 22/11/14, date de rendu du DCG, Kevin BASCOL devra se charger de l'envoi du document, si il n'est pas terminé avant 18h, et de toutes autres communications potentielles.
 \item Déplacement de la réalisation du cahier des tests d'intégration au 22/11/14 et rendu au 1/12/14, remplaçant ainsi le cahier des tests unitaires qui seront réalisés avec JUnit.
-\item \textcolor{red}{Jean-Mi} 
+\item GenMyModel ne fournissant pas 100\% des composantes du diagrammes de sequence nous allons chercher un autre outils plus complet.
 \end{itemize}
 
 %--------------------------Prévision du travail à réaliser------------------------------%
@@ -61,7 +61,7 @@ DCG : Document de Conception Générale.
 \begin{itemize}[label = $\ast$]
 
 \item Finir la rédaction du DCG.
-\item Mise à jour de la planification pour faire apparaître le déplacement du cahier des test d'intégration.\\
+\item Mettre à jour de la planification pour faire apparaître le déplacement du cahier des tests d'intégration.
 \item Commencer la rédaction du document de conception détaillée.
 \end{itemize}
 
