--- a/fichier_de_version.tex
+++ b/fichier_de_version.tex
@@ -32,7 +32,7 @@
     \begin{tabular}{|c|c|c|c|}
       \hline
       Version & Date creation & Date Rendu & Commentaires\\
-      v1.0 & 08/11/14 & 09/11/14 &
+      v1.0 & 08/11/14 & 11/11/14 & Rendu avec un retard annoncé de 2 jours.
       \hline
     \end{tabular}  
     
@@ -40,29 +40,24 @@
     \begin{tabular}{|c|c|c|c|}
       \hline
       Version & Date creation & Date Rendu & Commentaires\\
+      v1.0 & 16/11/14 & 22/11/14 & \\
       \hline
-    \end{tabular}  
-    
-   \section*{Cahier des tests d'integration}
-    \begin{tabular}{|c|c|c|c|}
-      \hline
-      Version & Date creation & Date Rendu & Commentaires\\
-      \hline
-    \end{tabular}  
+    \end{tabular}   
     
    \section*{Document de conception detaillée}
     \begin{tabular}{|c|c|c|c|}
       \hline
       Version & Date creation & Date Rendu & Commentaires\\
       \hline
-    \end{tabular}  
+    \end{tabular}
     
-   \section*{Cahier des tests unitaires}
+   \section*{Cahier des tests d'integration}
     \begin{tabular}{|c|c|c|c|}
       \hline
       Version & Date creation & Date Rendu & Commentaires\\
+      v1.0 & 19/11/14 & & \\
       \hline
-    \end{tabular}  
+    \end{tabular} 
     
    \section*{Code}
     \begin{tabular}{|c|c|c|c|}
