ajout des diagrammes de séquence dans le DCG

--- a/Document_de_conception_generale/Document_de_conception_generale.tex
+++ b/Document_de_conception_generale/Document_de_conception_generale.tex
@@ -327,7 +327,11 @@ signifient pour le modèle.
 		\end{flushleft}
 
 
-
+\subsection{Interaction entre module}
+\paragraph{Client}
+cf. Annexe, Diagramme de séquence client.
+\paragraph{Serveur}
+cf. Annexe, Diagramme de séquence serveur.
 \section{Définition des principales structures de données}
 
 	\subsection{Structures de données}
@@ -340,5 +344,17 @@ signifient pour le modèle.
 \subsection{Architecture modulaire du système KNS}
 	\begin{center}
 	\rotatebox{270}{\includegraphics[scale=0.35]{Ressources/modules_KNS.png}}	
+	\end{center}
+\newpage
+\subsection{Diagramme de séquence client}
+	
+	\begin{center}
+	\rotatebox{270}{\includegraphics[scale=0.3]{Ressources/diagramme_de_sequence_client.png}	}
+	\end{center}
+\newpage
+\subsection{Diagramme de séquence client}
+	
+	\begin{center}
+	\rotatebox{270}{\includegraphics[scale=0.25]{Ressources/diagramme_de_sequence_serveur.png}	}
 	\end{center}
 \end{document}
