--- a/Document_des_exigences/Document_des_exigences.tex
+++ b/Document_des_exigences/Document_des_exigences.tex
@@ -140,7 +140,7 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 	\begin{enumerate}
 		\item Le formulaire de connexion doit être de type Pop-up.
 		\item Le formulaire doit se situer au milieu de la fenêtre.
-		\item Le Pop-Up de connexion doit apparaitre dès l'ouverture du logiciel.
+		\item Le Pop-Up de connexion doit apparaître dès l'ouverture du logiciel.
 		\item Quand le Formulaire sera présent le bouton déconnexion doit être désactive.
 		\item Lorsqu'il est désactivé, le bouton déconnexion doit être grisé.
 		\item Le titre de ce Pop-up doit être "Authentification".
@@ -149,7 +149,7 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 		\item Le formulaire doit avoir, à la suite de la barre horizontale trois champs permettant à l'utilisateur d'écrire.
 		\item Les trois champs doivent être alignés avec les mots suivants : "Serveur", "Nom d'utilisateur" et "mot de passe" dans cette ordre.
 		\item Un bouton centré, nommé "Se connecter" doit être présent en bas du pop-up.
-		\item En cas d'erreur, un cadre aux bordures rouges doit apparaitre au dessus du champ concerné.
+		\item En cas d'erreur, un cadre aux bordures rouges doit apparaître au dessus du champ concerné.
 		\item Le reste de l'application (barre d'action non incluse) doit être grisé (voile gris au dessus) quand le pop-up est ouvert.
 	\end{enumerate}
 	
