--- a/Document_de_conception_detaille/Document_de_conception_detaille.tex
+++ b/Document_de_conception_detaille/Document_de_conception_detaille.tex
@@ -60,7 +60,7 @@
 			\hline
 			Version & Date & Description\\
 			\hline
-			V.1 & 29/11/14 & Première version de la conception détaillé\\
+			V.1 & 16/11/14 & Première version de la conception générale\\
 			\hline
 			 & & \\
 			\hline
