--- a/Rapport_reunion/Rapport_reunion_8.tex
+++ b/Rapport_reunion/Rapport_reunion_8.tex
@@ -30,9 +30,9 @@ Présents à cette réunion : Laoussing Kévin, Reynaud Nicolas, Bascol Kevin.\\
 %--------------------------Ordre du jour------------------------------%
 \subsection*{Ordre du jour}
 \begin{itemize}[label = $\ast$]
-\item Diagramme de classe
+\item Diagramme de classe.
 \item Modification de la planification.
-\item Détermination des fonctionnalités prioritaire.
+\item Détermination des fonctionnalités prioritaires.
 \end{itemize}
 
 %--------------------------Bilan du travail réalisé------------------------------%
@@ -40,7 +40,7 @@ Présents à cette réunion : Laoussing Kévin, Reynaud Nicolas, Bascol Kevin.\\
 
 \begin{itemize}[label = $\ast$]
 	\item Le diagramme de séquence à été réalisé par l'équipe.
-	\item Changement du diagramme de planification par Kevin Laoussing.
+	\item Changement du diagramme de Gantt par Kevin Laoussing.
 \end{itemize}
 
 
@@ -49,23 +49,24 @@ Présents à cette réunion : Laoussing Kévin, Reynaud Nicolas, Bascol Kevin.\\
 
 \begin{itemize}[label = $\ast$]
 	\item Changement du site GenMyModel (Outil permettant la création de diagramme de séquence / classe etc)  pour \url{https://www.lucidchart.com}.
-	\item https://www.lucidchart.com , proposé par Kévin Bascol nous laisse droit à 14 jours d'essai, ceci 	étant largement suffisant pour crée le diagramme de séquence.
-	\item GenMyModel à été remplacé car celui ci ne permettait pas d'indiquer les actions asynchrones.
-	\item Utilisation de lucidchart pour ça simplicité d'utilisation et sa capacité a travaillé en ligne a plusieurs.
+	\subitem https://www.lucidchart.com , proposé par Kevin Bascol, nous donne droit à 14 jours d'essai, ceci étant suffisant pour créer les diagrammes de séquence.
+	\subitem GenMyModel à été remplacé car il ne permettait pas d'indiquer les appels asynchrones.
+	\subitem Utilisation de lucidchart pour sa simplicité d'utilisation et la possibilité de collaborer en temps réel.
 	\item Déplacement de la période de codage pour la faire correspondre aux vacances, ce qui nous permettra d'être à notre plein potentiel.
 	\item Raccourcissement du temps pour la rédaction du bilan, passant de 9 jours a 2 jours.
-	\item La fonctionnalité de statistique sera réduite à sont minimum ( Pas de graphe, peut d'information ).
+	\item La fonctionnalité de statistique sera réduite à son minimum ( Pas de graphe, peu d'information ).
 \end{itemize}
 
 %--------------------------Prévision du travail à réaliser------------------------------%
 \subsection*{Prévision du travail à réaliser}
 
 \begin{itemize}[label = $\ast$]
-	\item Finir la rédaction cahier de tests d'intégration.
+	\item Finir la rédaction du document de conception détaillée.
+	\item Finir la rédaction du cahier de tests d'intégration.
 \end{itemize}
 
 %----------------------------------Prochaine réunion------------------------------------%
-\subsection*{Prochaine réunion : 4 decembre 2014}
+\subsection*{Prochaine réunion : 4 décembre 2014}
 
 \textbf{Ordre du jour} : Début du code et état d'avancement.\\
 
