maj sous liste rapport 8

--- a/Rapport_reunion/Rapport_reunion_8.tex
+++ b/Rapport_reunion/Rapport_reunion_8.tex
@@ -49,9 +49,11 @@ Présents à cette réunion : Laoussing Kévin, Reynaud Nicolas, Bascol Kevin.\\
 
 \begin{itemize}[label = $\ast$]
 	\item Changement du site GenMyModel (Outil permettant la création de diagramme de séquence / classe etc)  pour \url{https://www.lucidchart.com}.
-	\subitem https://www.lucidchart.com , proposé par Kevin Bascol, nous donne droit à 14 jours d'essai, ceci étant suffisant pour créer les diagrammes de séquence.
-	\subitem GenMyModel à été remplacé car il ne permettait pas d'indiquer les appels asynchrones.
-	\subitem Utilisation de lucidchart pour sa simplicité d'utilisation et la possibilité de collaborer en temps réel.
+	\begin{itemize}[label = $\circ$]
+		\item https://www.lucidchart.com , proposé par Kevin Bascol, nous donne droit à 14 jours d'essai, ceci étant suffisant pour créer les diagrammes de séquence.
+		\item GenMyModel à été remplacé car il ne permettait pas d'indiquer les appels asynchrones.
+		\item Utilisation de lucidchart pour sa simplicité d'utilisation et la possibilité de collaborer en temps réel.
+	\end{itemize}
 	\item Déplacement de la période de codage pour la faire correspondre aux vacances, ce qui nous permettra d'être à notre plein potentiel.
 	\item Raccourcissement du temps pour la rédaction du bilan, passant de 9 jours a 2 jours.
 	\item La fonctionnalité de statistique sera réduite à son minimum ( Pas de graphe, peu d'information ).
